Apply styling for application page.

--- a/apply.html
+++ b/apply.html
@@ -203,46 +203,217 @@
         /><br /><br />
 
         <!--Skill-->
-        <label for="phone">Skill</label><br />
-        <input type="checkbox" id="skill1" name="skill1" value="Skill" />
-        <label for="skill1">Problem solving</label><br />
-        <input type="checkbox" id="skill2" name="skill2" value="Skill" />
-        <label for="skill2">Deep learning</label><br />
-        <input type="checkbox" id="skill3" name="skill3" value="Skill" />
-        <label for="skill3">Critical thinking</label><br />
-        <input type="checkbox" id="skill4" name="skill4" value="Skill" />
-        <label for="skill4">Data engineering</label><br />
-        <input type="checkbox" id="skill5" name="skill5" value="Skill" />
-        <label for="skill5">Machine learning</label><br />
-        <input type="checkbox" id="skill6" name="skill6" value="Skill" />
-        <label for="skill6">Communication</label><br />
-        <input type="checkbox" id="skill7" name="skill7" value="Skill" />
-        <label for="skill7">Big data analytics</label><br />
-        <input type="checkbox" id="skill8" name="skill8" value="Skill" />
-        <label for="skill8">Neural network architectures</label><br />
-        <input type="checkbox" id="skill9" name="skill9" value="Skill" />
-        <label for="skill9">Natural language processing</label><br />
-        <input type="checkbox" id="skill10" name="skill10" value="Skill" />
-        <label for="skill10">Cloud knowledge</label><br />
-        <input type="checkbox" id="skill11" name="skill11" value="Skill" />
-        <label for="skill11">Teamwork</label><br />
-        <input type="checkbox" id="skill12" name="skill12" value="Skill" />
-        <label for="skill12">Data visualization</label><br />
-        <input type="checkbox" id="skill13" name="skill13" value="Skill" />
-        <label for="skill13">Linear algebra and Statistics</label><br />
-        <input type="checkbox" id="skill14" name="skill14" value="Skill" />
-        <label for="skill14">Other</label><br />
+
+        <h4>Your skills:</h4>
+
+        <br />
+        <label class="checkbox">
+          Problem solving
+          <div>
+            <input
+              type="checkbox"
+              id="skill1"
+              name="skill1"
+              value="Problem solving"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Deep learning
+          <div>
+            <input
+              type="checkbox"
+              id="skill2"
+              name="skill2"
+              value="Deep learning"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Critical thinking
+          <div>
+            <input
+              type="checkbox"
+              id="skill3"
+              name="skill3"
+              value="Critical thinking"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Data engineering
+          <div>
+            <input
+              type="checkbox"
+              id="skill4"
+              name="skill4"
+              value="Data engineering"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Machine learning
+          <div>
+            <input
+              type="checkbox"
+              id="skill5"
+              name="skill5"
+              value="Machine learning"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Communication
+          <div>
+            <input
+              type="checkbox"
+              id="skill6"
+              name="skill6"
+              value="Communication"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Big data analytics
+          <div>
+            <input
+              type="checkbox"
+              id="skill7"
+              name="skill7"
+              value="Big data analytics"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Neural network architectures
+          <div>
+            <input
+              type="checkbox"
+              id="skill8"
+              name="skill8"
+              value="Neural network architectures"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Natural language processing
+          <div>
+            <input
+              type="checkbox"
+              id="skill9"
+              name="skill9"
+              value="Natural language processing"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Cloud knowledge
+          <div>
+            <input
+              type="checkbox"
+              id="skill10"
+              name="skill10"
+              value="Cloud knowledge"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Teamwork
+          <div>
+            <input
+              type="checkbox"
+              id="skill11"
+              name="skill11"
+              value="Teamwork"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Data visualization
+          <div>
+            <input
+              type="checkbox"
+              id="skill12"
+              name="skill12"
+              value="Data visualization"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Linear algebra and Statistics
+          <div>
+            <input
+              type="checkbox"
+              id="skill13"
+              name="skill13"
+              value="Linear algebra and Statistics"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
+        <label class="checkbox">
+          Other
+          <div>
+            <input
+              type="checkbox"
+              id="skill14"
+              name="skill14"
+              value="Other"
+              class="checkbox__input"
+            />
+            <span class="checkbox__checkmark"></span>
+          </div>
+        </label>
+
         <input
           type="text"
           id="otherskill"
           name="otherskill"
           class="resizedTextbox"
           placeholder="Enter your other skill here"
-        /><br /><br />
+        />
 
         <!--Apply button-->
         <!--The apply button require input not hyperlink or other type-->
-        <input type="submit" value="Apply" />
+        <input class="btn btn-secondary" type="submit" value="Apply" />
       </form>
     </section>
 
@@ -314,7 +485,7 @@
         <p>&copy; 2024 All rights reserved</p>
 
         <div class="legal__links">
-          <span>Made by Nguyen Duy An</span>
+          <span>Made by Nguyen Ky Anh & Nguyen Duy An</span>
         </div>
       </div>
     </footer>
