Edit btn styles

--- a/apply.html
+++ b/apply.html
@@ -413,7 +413,9 @@
 
         <!--Apply button-->
         <!--The apply button require input not hyperlink or other type-->
-        <input class="btn btn-secondary" type="submit" value="Apply" />
+        <button class="btn btn-secondary" type="submit" value="Apply">
+          Submit
+        </button>
       </form>
     </section>
 
