--- a/jobs.html
+++ b/jobs.html
@@ -187,8 +187,8 @@
           </label>
         </div>
 
-        <button class="btn btn-primary">Search</button>
-        <button class="btn btn-secondary">Reset</button>
+        <button class="btn btn-secondary">Search</button>
+        <button class="btn btn-primary">Reset</button>
       </aside>
 
       <section class="job-postings">
