Add apply button and edit href for nav links

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
         <a href="#" class="btn btn-outline">Login</a>
@@ -55,8 +55,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
 
       <div class="navbar__btn-container">
