--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
         <a href="#" class="btn btn-outline">Login</a>
@@ -56,8 +56,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
 
       <div class="navbar__btn-container">
@@ -169,7 +169,7 @@
       <p class="paragraph">
         We research generative models and how to align them with human values.
       </p>
-      <a href="#" class="btn btn-outline btn-sm">Learn about us</a>
+      <a href="about.html" class="btn btn-outline btn-sm">Learn about us</a>
     </div>
 
     <section class="section-placeholder">
@@ -182,7 +182,7 @@
 
     <div class="placeholder-container">
       <h2 class="sub-heading">Join us in shaping the future of technology.</h2>
-      <a href="#" class="btn btn-outline btn-sm">Career</a>
+      <a href="jobs.html" class="btn btn-outline btn-sm">Career</a>
     </div>
 
     <div class="divider-sm"></div>
