--- a/apply.html
+++ b/apply.html
@@ -21,8 +21,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
         <a href="#" class="btn btn-outline">Login</a>
@@ -54,8 +54,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
 
       <div class="navbar__btn-container">
