--- a/jobs.html
+++ b/jobs.html
@@ -20,8 +20,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
         <a href="#" class="btn btn-outline">Login</a>
@@ -53,8 +53,8 @@
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
         <a href="#" class="navbar__link">Services</a>
-        <a href="#" class="navbar__link">Career</a>
-        <a href="#" class="navbar__link">About</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
       </div>
 
       <div class="navbar__btn-container">
@@ -80,6 +80,10 @@
     <div class="divider"></div>
 
     <h2 class="sub-heading">Opening positions</h2>
+
+    <div class="apply-here-btn">
+      <a href="apply.html" class="btn btn-outline">Apply here</a>
+    </div>
 
     <section class="jobs-board">
       <aside class="filters">
