--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
           VRC participant, Vietnam Science and Engineering Fair (ViSEF)
           participant.
         </dd>
-        <a href="#" class="btn btn-outline btn-sm">Contact Us</a>
+        <a href="nguyenduyan28062005@gmail.com" class="btn btn-outline btn-sm">Contact Us</a>
       </div>
     </dl>
 
