--- a/about.html
+++ b/about.html
@@ -100,10 +100,10 @@
           <h6 class="sub-heading">SWS01032</h6>
         </dt>
         <dd class="paragraph">
-          Created own website for a pharmacy. To maintain inventory of
-          medications and to advertise the pharmacy. Used Python to construct a
-          number of features. The bot used to graph, answer math problems,
-          create charts, and show the Covid in each nation. VEX-IQ participant,
+          Created own website for a pharmacy, to maintain inventory of
+          medications and to advertise the pharmacy. Used Python to construct a bot with
+          number of features. The bot able to graph, answer math problems,
+          create charts, and show the Covid map in each nation. VEX-IQ participant,
           VRC participant, Vietnam Science and Engineering Fair (ViSEF)
           participant.
         </dd>
