Finished login page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
-        <a href="#" class="btn btn-outline">Login</a>
+        <a href="login.html" class="btn btn-outline">Login</a>
         <svg
           width="15"
           height="15"
@@ -60,7 +60,7 @@
       </div>
 
       <div class="navbar__btn-container">
-        <a href="#" class="btn btn-outline">Login</a>
+        <a href="login.html" class="btn btn-outline">Login</a>
         <svg
           width="15"
           height="15"
@@ -101,13 +101,17 @@
         </dt>
         <dd class="paragraph">
           Created own website for a pharmacy, to maintain inventory of
-          medications and to advertise the pharmacy. Used Python to construct a bot with
-          number of features. The bot able to graph, answer math problems,
-          create charts, and show the Covid map in each nation. VEX-IQ participant,
-          VRC participant, Vietnam Science and Engineering Fair (ViSEF)
-          participant.
+          medications and to advertise the pharmacy. Used Python to construct a
+          bot with number of features. The bot able to graph, answer math
+          problems, create charts, and show the Covid map in each nation. VEX-IQ
+          participant, VRC participant, Vietnam Science and Engineering Fair
+          (ViSEF) participant.
         </dd>
-        <a href="mailto:nguyenduyan28062005@gmail.com" class="btn btn-outline btn-sm">Contact Us</a>
+        <a
+          href="mailto:nguyenduyan28062005@gmail.com"
+          class="btn btn-outline btn-sm"
+          >Contact Us</a
+        >
       </div>
     </dl>
 
@@ -138,7 +142,7 @@
     <!--Time table-->
     <div class="placeholder-container">
       <h2 class="sub-heading">Our Schedule</h2>
-      <br>
+      <br />
     </div>
     <div class="timetable">
       <div class="week-names">
