--- a/apply.html
+++ b/apply.html
@@ -25,7 +25,7 @@
         <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
-        <a href="#" class="btn btn-outline">Login</a>
+        <a href="login.html" class="btn btn-outline">Login</a>
         <svg
           width="15"
           height="15"
@@ -59,7 +59,7 @@
       </div>
 
       <div class="navbar__btn-container">
-        <a href="#" class="btn btn-outline">Login</a>
+        <a href="login.html" class="btn btn-outline">Login</a>
         <svg
           width="15"
           height="15"
