--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="about.html" class="navbar__link">About</a>
       </div>
       <div class="navbar__btn-container">
-        <a href="#" class="btn btn-outline">Login</a>
+        <a href="login.html" class="btn btn-outline">Login</a>
         <svg
           width="15"
           height="15"
@@ -61,7 +61,7 @@
       </div>
 
       <div class="navbar__btn-container">
-        <a href="#" class="btn btn-outline">Login</a>
+        <a href="login.html" class="btn btn-outline">Login</a>
         <svg
           width="15"
           height="15"
