--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
 
         <p class="login-form__homelink">
           Back to the
-          <a href="/"> HOMEPAGE </a>
+          <a href="index.html"> HOMEPAGE </a>
         </p>
       </form>
     </body>
