--- a/apply.html
+++ b/apply.html
@@ -204,7 +204,7 @@
 
         <!--Skill-->
 
-        <h4>Your skills:</h4>
+        <h4>Your skills</h4>
 
         <br />
         <label class="checkbox">
