--- a/about.html
+++ b/about.html
@@ -231,79 +231,98 @@
         <div class="weekend"></div>
       </div>
     </div>
-  </body>
-  <div class="divider-sm"></div>
 
-  <!--Footer-->
-  <footer class="footer">
-    <div class="footer__addr">
-      <h1 class="logo">SwinWORK</h1>
+    <div class="divider"></div>
+
+    <!-- MAP -->
+
+    <h2 class="sub-heading">Our Location</h2>
+
+    <br />
+
+    <div class="map-container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.936033811077!2d106.66413508480598!3d10.816207230976504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ff6c51d5ebd%3A0x4403e126c229b92b!2sSwinburne%20Vietnam%20-%20HCMC%20Campus!5e0!3m2!1sen!2s!4v1708652413341!5m2!1sen!2s"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
 
-    <ul class="footer__nav">
-      <li class="nav__item">
-        <h2 class="nav__title">Media</h2>
-        <ul class="nav__ul">
-          <li>
-            <a href="#">Online</a>
-          </li>
-          <li>
-            <a href="#">Print</a>
-          </li>
-          <li>
-            <a href="#">Alternative Ads</a>
-          </li>
-        </ul>
-      </li>
+    <div class="divider-sm"></div>
 
-      <li class="nav__item nav__item--extra">
-        <h2 class="nav__title">Technology</h2>
-        <ul class="nav__ul nav__ul--extra">
-          <li>
-            <a href="#">Hardware Design</a>
-          </li>
-          <li>
-            <a href="#">Software Design</a>
-          </li>
-          <li>
-            <a href="#">Digital Signage</a>
-          </li>
-          <li>
-            <a href="#">Automation</a>
-          </li>
-          <li>
-            <a href="#">Artificial Intelligence</a>
-          </li>
-          <li>
-            <a href="#">IoT</a>
-          </li>
-        </ul>
-      </li>
-
-      <li class="nav__item">
-        <h2 class="nav__title">Legal</h2>
-        <ul class="nav__ul">
-          <li>
-            <a href="#">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="#">Terms of Use</a>
-          </li>
-          <li>
-            <a href="#">Sitemap</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-
-    <div class="legal">
-      <p>&copy; 2024 All rights reserved</p>
-
-      <div class="legal__links">
-        <span>Made by Nguyen Duy An</span>
+    <!--Footer-->
+    <footer class="footer">
+      <div class="footer__addr">
+        <h1 class="logo">SwinWORK</h1>
       </div>
-    </div>
-  </footer>
+
+      <ul class="footer__nav">
+        <li class="nav__item">
+          <h2 class="nav__title">Media</h2>
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Online</a>
+            </li>
+            <li>
+              <a href="#">Print</a>
+            </li>
+            <li>
+              <a href="#">Alternative Ads</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item nav__item--extra">
+          <h2 class="nav__title">Technology</h2>
+          <ul class="nav__ul nav__ul--extra">
+            <li>
+              <a href="#">Hardware Design</a>
+            </li>
+            <li>
+              <a href="#">Software Design</a>
+            </li>
+            <li>
+              <a href="#">Digital Signage</a>
+            </li>
+            <li>
+              <a href="#">Automation</a>
+            </li>
+            <li>
+              <a href="#">Artificial Intelligence</a>
+            </li>
+            <li>
+              <a href="#">IoT</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item">
+          <h2 class="nav__title">Legal</h2>
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="#">Terms of Use</a>
+            </li>
+            <li>
+              <a href="#">Sitemap</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <div class="legal">
+        <p>&copy; 2024 All rights reserved</p>
+
+        <div class="legal__links">
+          <span>Made by Nguyen Duy An</span>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
 <!--
 (●っゝω・)っ～☆HELLO☆
