--- a/jobs.html
+++ b/jobs.html
@@ -168,7 +168,7 @@
         </div>
 
         <div class="toggle-container">
-          <p class="toggle-container__text">Remote Work?</p>
+          <p class="toggle-container__text">Remote Work</p>
           <label class="toggle">
             <input type="checkbox" class="toggle__input" />
             <div class="toggle__control"></div>
@@ -176,7 +176,7 @@
         </div>
 
         <div class="toggle-container">
-          <p class="toggle-container__text">Flexible Hours?</p>
+          <p class="toggle-container__text">Flexible Hours</p>
           <label class="toggle">
             <input type="checkbox" class="toggle__input" />
             <div class="toggle__control"></div>
@@ -184,7 +184,7 @@
         </div>
 
         <div class="toggle-container">
-          <p class="toggle-container__text">Health Benefits?</p>
+          <p class="toggle-container__text">Health Benefits</p>
           <label class="toggle">
             <input type="checkbox" class="toggle__input" />
             <div class="toggle__control"></div>
