--- a/services.html
+++ b/services.html
@@ -54,6 +54,7 @@
     
     <div class="divider"></div>
 
+  <!--Short About-->
     <div class="placeholder-container">
     <h1 class="sub-heading">Why us?</h1>
       <p class="paragraph">
@@ -67,7 +68,8 @@
     </div>
 
   </br></br>
-  
+
+  <!--Services-->
     <div class="placeholder-container">
       <h1 class="sub-heading">Services</h1>
       <p class="paragraph">
@@ -83,8 +85,7 @@
       </p>
     </div>
 
-    <div class="divider"></div>
-<br><br>
+<!--Pricing-->
     <section class="plans__container">
       <div class="plans">
         <div class="plansHero">
