--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
-        <a href="#" class="navbar__link">Services</a>
+        <a href="services.html" class="navbar__link">Services</a>
         <a href="jobs.html" class="navbar__link">Career</a>
         <a href="about.html" class="navbar__link">About</a>
       </div>
