--- a/apply.html
+++ b/apply.html
@@ -56,9 +56,8 @@
     <header class="header">
       <div class="header__heading-container">
         <h1 class="header__heading">
-          Introducing SwinAI: No more absent students.
+         Application 
         </h1>
-        <a href="#" class="btn btn-outline btn-sm">Discover now</a>
       </div>
     </header>
 
