--- a/services.html
+++ b/services.html
@@ -199,7 +199,7 @@
       </div>
     </section>
     
-    <div class="divider"></div>
+    <div class="divider-sm"></div>
 
     <!--Footer-->
     <footer class="footer">
