--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         <h1 class="sub-heading">SwinWORK Team</h1>
         <br>
         <div class="placeholder-container">
-          <img class="profile-img" src="Ky Anh.jpg">
+          <img class="profile-img" src="./images/Ky Anh.jpg">
           <dt class="paragraph">
             <b>Nguyen Ky Anh</b>
             <h6 class="sub-heading">SWS01168</h6>
@@ -95,7 +95,7 @@
             The support includes live coding sessions, progress checking, personalized study plans, and teaching abstract concepts. 
             VEX-IQ participant, VRC participant, Vietnam Science and Engineering Fair (ViSEF) participant.
         </dd>
-          <img class="profile-img" src="Duy An.jpg">
+          <img class="profile-img" src="./images/Duy An.jpg">
           <dt class="paragraph">
             <b>Nguyen Duy An</b>
             <h6 class="sub-heading">SWS01032</h6>
@@ -108,7 +108,7 @@
             Supporting students with the use of MongoDB, ExpressJS, ReactJS, Redux, MaterialUI, NodeJS.
         </dd>
         <div class="team-img">
-          <img src="Team.jpg" alt="5 Terre" style="width:100%">
+          <img src="./images/Team.jpg" alt="5 Terre" style="width:100%">
           <div class="container">
           <p>SwinWORK Team</p>
           </div>
@@ -131,8 +131,6 @@
         taught us tons of things not only coding but also life experience and career. </dd>
     </div>
     </dl>
-
-    <div class="divider"></div>
     
     <!--Course name-->
     <div class="placeholder-container">
