--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <nav class="navbar-solid">
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
-        <a href="#" class="navbar__link">Services</a>
+        <a href="services.html" class="navbar__link">Services</a>
         <a href="jobs.html" class="navbar__link">Career</a>
         <a href="about.html" class="navbar__link">About</a>
       </div>
@@ -113,7 +113,7 @@
           <p>SwinWORK Team</p>
           </div>
         </div>
-        <a href="#" class="btn btn-outline btn-sm">Contact Us</a>
+        <a href="mailto:nguyenduyan28062005@gmail.com" class="btn btn-outline btn-sm">Contact Us</a>
         </div>
     </dl>
 
