--- a/services.html
+++ b/services.html
@@ -20,56 +20,39 @@
     <nav class="navbar">
       <a class="logo" href="index.html">SwinWORK</a>
       <div class="navbar__link-container">
-        <a href="#" class="navbar__link">Services</a>
-        <a href="jobs.html" class="navbar__link">Career</a>
-        <a href="about.html" class="navbar__link">About</a>
-      </div>
-      <div class="navbar__btn-container">
-        <a href="login.html" class="btn btn-outline">Login</a>
-        <svg
-          width="15"
-          height="15"
-          viewBox="0 0 15 15"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          class="more"
-        >
-          <path
-            d="M2.5 4C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H12.5C12.7761 5 13 4.77614 13 4.5C13 4.22386 12.7761 4 12.5 4H2.5ZM2 7.5C2 7.22386 2.22386 7 2.5 7H12.5C12.7761 7 13 7.22386 13 7.5C13 7.77614 12.7761 8 12.5 8H2.5C2.22386 8 2 7.77614 2 7.5ZM2 10.5C2 10.2239 2.22386 10 2.5 10H12.5C12.7761 10 13 10.2239 13 10.5C13 10.7761 12.7761 11 12.5 11H2.5C2.22386 11 2 10.7761 2 10.5Z"
-            fill="currentColor"
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </div>
-    </nav>
-<nav class="navbar-solid">
-      <a class="logo" href="index.html">SwinWORK</a>
-      <div class="navbar__link-container">
         <a href="services.html" class="navbar__link">Services</a>
         <a href="jobs.html" class="navbar__link">Career</a>
         <a href="about.html" class="navbar__link">About</a>
       </div>
-
       <div class="navbar__btn-container">
         <a href="login.html" class="btn btn-outline">Login</a>
-        <svg
-          width="15"
-          height="15"
-          viewBox="0 0 15 15"
-          fill="none"
-          class="more"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M2.5 4C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H12.5C12.7761 5 13 4.77614 13 4.5C13 4.22386 12.7761 4 12.5 4H2.5ZM2 7.5C2 7.22386 2.22386 7 2.5 7H12.5C12.7761 7 13 7.22386 13 7.5C13 7.77614 12.7761 8 12.5 8H2.5C2.22386 8 2 7.77614 2 7.5ZM2 10.5C2 10.2239 2.22386 10 2.5 10H12.5C12.7761 10 13 10.2239 13 10.5C13 10.7761 12.7761 11 12.5 11H2.5C2.22386 11 2 10.7761 2 10.5Z"
-            fill="currentColor"
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
+
+        <input type="checkbox" class="navigation__checkbox" id="nav-toggle" />
+        <label for="nav-toggle" class="navigation__button">
+          <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <nav class="navigation__nav">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="services.html" class="navbar__link">Services</a>
+            </li>
+            <li class="navigation__item">
+              <a href="jobs.html" class="navbar__link">Career</a>
+            </li>
+            <li class="navigation__item">
+              <a href="apply.html" class="navbar__link">Apply</a>
+            </li>
+            <li class="navigation__item">
+              <a href="about.html" class="navbar__link">About</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </nav>
+
     <!--Header-->
     <header class="header2">
         <div class="header2__heading-container">
@@ -78,6 +61,42 @@
           </h1>
         </div>
       </header>
+
+    <nav class="navbar-solid">
+      <a class="logo" href="index.html">SwinWORK</a>
+      <div class="navbar__link-container">
+        <a href="services.html" class="navbar__link">Services</a>
+        <a href="jobs.html" class="navbar__link">Career</a>
+        <a href="about.html" class="navbar__link">About</a>
+      </div>
+      <div class="navbar__btn-container">
+        <a href="login.html" class="btn btn-outline">Login</a>
+
+        <input type="checkbox" class="navigation__checkbox" id="nav-toggle" />
+        <label for="nav-toggle" class="navigation__button">
+          <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <nav class="navigation__nav">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="services.html" class="navbar__link">Services</a>
+            </li>
+            <li class="navigation__item">
+              <a href="jobs.html" class="navbar__link">Career</a>
+            </li>
+            <li class="navigation__item">
+              <a href="apply.html" class="navbar__link">Apply</a>
+            </li>
+            <li class="navigation__item">
+              <a href="about.html" class="navbar__link">About</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </nav>
     
     <div class="divider"></div>
 
