Added enhancements page

--- a/apply.html
+++ b/apply.html
@@ -55,9 +55,7 @@
 
     <header class="header">
       <div class="header__heading-container">
-        <h1 class="header__heading">
-         Application 
-        </h1>
+        <h1 class="header__heading">Application</h1>
       </div>
     </header>
 
@@ -496,7 +494,7 @@
               <a href="#">Terms of Use</a>
             </li>
             <li>
-              <a href="#">Sitemap</a>
+              <a href="enhancements.html">Enhancements</a>
             </li>
           </ul>
         </li>
