--- a/jobs.html
+++ b/jobs.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
 
-     <header class="header">
+    <header class="header">
       <div class="header__heading-container">
         <h1 class="header__heading">Job postings</h1>
       </div>
@@ -423,7 +423,7 @@
             </li>
 
             <li>
-              <a href="#">Sitemap</a>
+              <a href="enhancements.html">Enhancements</a>
             </li>
           </ul>
         </li>
