--- a/services.html
+++ b/services.html
@@ -276,7 +276,7 @@
               <a href="#">Terms of Use</a>
             </li>
             <li>
-              <a href="#">Sitemap</a>
+              <a href="enhancements.html">Enhancements</a>
             </li>
           </ul>
         </li>
