--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </li>
 
             <li>
-              <a href="#">Sitemap</a>
+              <a href="enhancements.html">Enhancements</a>
             </li>
           </ul>
         </li>
