--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
     <div class="divider"></div>
 
     <!--Time table-->
-    <div class="placeholder-container">
+    <div class="placeholder-container" id="timetable-hyperlink">
       <h2 class="sub-heading">Our Schedule</h2>
       <br />
     </div>
