--- a/enhancements.html
+++ b/enhancements.html
@@ -208,6 +208,7 @@
             <ul>
               <li>A time table using pure HTML and CSS.</li>
               <li>Optimized for smaller devices.</li>
+              <li>Hoverable.</li>
             </ul>
             <h3>How:</h3>
             <ul>
